fix(main.scss): Fix blip chat disappears on mobile mode. #134532

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@ $maxHeight: 420px;
 @media screen and (max-width: $maxWidth), screen and (max-height: $maxHeight) {
   .chatParent {
     overflow-y: hidden;
+    position: static;
     height: 0px;
     width: 0px;
   }
@@ -28,7 +29,7 @@ $maxHeight: 420px;
   bottom: 40px;
   right: 80px;
   z-index: 1000000;
-  
+
   @media screen and (max-width: $maxWidth), screen and (max-height: $maxHeight) {
     bottom: 0px;
     right: 0px;
@@ -63,7 +64,7 @@ $maxHeight: 420px;
     &.blip-chat-iframe-opened {
       opacity: 1;
       transform: translateY(0);
-      visibility: visible;      
+      visibility: visible;
       transition: opacity 500ms 10ms, transform 500ms 10ms, visibility 500ms 10ms, height 0ms;
       height: 610px;
 
@@ -100,7 +101,7 @@ $maxHeight: 420px;
           visibility: hidden !important;
           opacity: 0 !important;
         }
-      } 
+      }
 
     &:active {
       transform: scale(0.9);
